welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:8: error: type mismatch;
 found   : Unit
 required: Int
		else if ( 67.0 <= speed && speed <= 86)
                     ^